--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					</tr>
 					<tr>
 						<td>pwd</td>
-						<td> Gives present working directory </td>
+						<td> Gives the present working directory </td>
 					</tr>
 					<tr> 
 						<td>ls</td>
